force-app/main/default/objects/Budget_Detail__c/Budget_Detail__c.object-meta.xml
<CustomObject>
    <label>Budget Detail</label>
    <nameField>
        <displayFormat>BD-{0000000}</displayFormat>
        <label>Budget Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>