force-app/main/default/objects/Budget_Detail__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>pse__Budget__c</referenceTo>
    <relationshipLabel>Budget Details</relationshipLabel>
    <relationshipName>Budget_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>